--- a/src/assets/userInfo.css
+++ b/src/assets/userInfo.css
@@ -9,15 +9,20 @@
     height: auto;
     background-color: #E6E6E7;
     display: flex;
-    flex-direction: column;
+   flex-direction: column;
     flex-wrap: wrap;
     border-radius: 10px;
     box-shadow: 0px 0px 10px rgb(7, 7, 7);
+    align-items: center;
+    position: relative;
 }
 
 .userInfo button {
-    width: 80px;
+    width: 100px;
+    height: 60px;
     margin: 2vh;
+    position: absolute;
+    left: 0;
 }
 
 .userInfo img {
@@ -27,13 +32,13 @@
 }
 
 .img-field {
-    width: 15vw;
+    width: 18%;
     height: 30vh;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    margin: 1vh 0 0 2vh;
+    margin: 5vh 0 0 2vh;
 }
 
 p {
@@ -47,13 +52,16 @@ p {
 
 .info-field {
     display: flex;
-    flex-wrap: wrap;
+    
     flex-direction: column;
+    max-height: 70vh;
     height: 100%;
-    width: 60%;
+    width: 65%;
     align-items: left;
     margin-top: 8vh;
-    justify-content: space-between;
+    justify-content: space-around;
+    padding: 10px;
+    overflow-y: scroll;
 }
 
 .langs-info {
@@ -88,6 +96,7 @@ p {
 .hobbies-info {
     display: flex;
     max-height: 15vh;
+    height: 100%;
     border-radius: 10px;
     align-items:flex-start;
     padding: 1vh 0 0 0;
@@ -136,7 +145,7 @@ p {
 .hob {
     display: flex;
     width: 100%;
-    max-height: 100%;
+    max-height: 15vh;
     overflow-y: scroll;
     flex-wrap: wrap;
 }
